--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
           </li>
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
-          </li>
+          </li> -->
 
         </ul>
 
@@ -979,7 +979,7 @@
         - #BLOG
       -->
 
-      <article class="blog" data-page="blog">
+      <!-- <article class="blog" data-page="blog">
 
         <header>
           <h2 class="h2 article-title">Blog</h2>
@@ -1167,9 +1167,6 @@
 
 
 
-      <!--
-        - #CONTACT
-      -->
 
       <article class="contact" data-page="contact">
 
@@ -1212,7 +1209,7 @@
 
     </div>
 
-  </main>
+  </main> -->
 
 
 
