--- a/index.html
+++ b/index.html
@@ -223,10 +223,7 @@
 
         <section class="about-text">
           <p>
-            Enthusiastic and dedicated 3rd-year Integrated MSc student specializing in Artificial Intelligence and Data Science. Adept at applying advanced computational techniques to extract meaningful insights from complex datasets.
-            Possess a good knowledge in machine learning, deep learning, statistical analysis, MERN and NLP.
-            Proven ability to tackle real-world problems through innovative and data-driven solutions          </p>
-
+            Enthusiastic and dedicated 4th-year Integrated MSc student specializing in Artificial Intelligence and Data Science. Adept at applying advanced computational techniques to extract meaningful insights from complex datasets. Possess a good knowledge in machine learning, deep learning, statistical analysis, NLP and Image Processing. Proven ability to tackle real-world problems through innovative and data-driven solutions.
           <!-- <p>
             My job is to build your website so that it is functional and user-friendly but at the same time attractive.
             Moreover, I
