about me changed

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             </div>
 
             <div class="contact-info">
-              <p class="contact-title">Phone</p>
+              <p class="contact-title">linkedin</p>
 
-              <a href="tel:+918547735690" class="contact-link">+918547735690</a>
+              <a href="https://www.linkedin.com/in/akshay-k-s-oo4/" class="contact-link">Akshay</a>
             </div>
 
           </li>
